log
Thu Apr 16 08:27:06 PM UTC 2026: 
 hashmap.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:24: error: initialization of ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Wincompatible-pointer-types]
   63 |     Pair** newBucket = createPair(key, value);
      |                        ^~~~~~~~~~
hashmap.c:66:9: error: ‘buckets’ undeclared (first use in this function)
   66 |         buckets[index] -> key = newBucket -> key;
      |         ^~~~~~~
hashmap.c:66:9: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:66:43: error: ‘newBucket’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   66 |         buckets[index] -> key = newBucket -> key;
      |                                           ^~
      |                                 (*       )
hashmap.c:67:45: error: ‘newBucket’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   67 |         buckets[index] -> value = newBucket -> value;
      |                                             ^~
      |                                   (*       )
hashmap.c:70:5: error: ‘else’ without a previous ‘if’
   70 |     else{
      |     ^~~~
hashmap.c:74:34: error: implicit declaration of function ‘lastMap’ [-Wimplicit-function-declaration]
   74 |             if(buckets[index] == lastMap(map)){
      |                                  ^~~~~~~
hashmap.c:85:43: error: ‘newBucket’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   85 |         buckets[index] -> key = newBucket -> key;
      |                                           ^~
      |                                 (*       )
hashmap.c:86:45: error: ‘newBucket’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   86 |         buckets[index] -> value = newBucket -> value;
      |                                             ^~
      |                                   (*       )
b45ce8a
Thu Apr 16 08:27:50 PM UTC 2026: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:24: error: initialization of ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Wincompatible-pointer-types]
   63 |     Pair** newBucket = createPair(key, value);
      |                        ^~~~~~~~~~
hashmap.c:66:50: error: ‘newBucket’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   66 |         map -> buckets[index] -> key = newBucket -> key;
      |                                                  ^~
      |                                        (*       )
hashmap.c:67:52: error: ‘newBucket’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   67 |         map -> buckets[index] -> value = newBucket -> value;
      |                                                    ^~
      |                                          (*       )
hashmap.c:70:5: error: ‘else’ without a previous ‘if’
   70 |     else{
      |     ^~~~
hashmap.c:74:16: error: ‘buckets’ undeclared (first use in this function)
   74 |             if(buckets[index] == lastMap(map)){
      |                ^~~~~~~
hashmap.c:74:16: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:74:34: error: implicit declaration of function ‘lastMap’ [-Wimplicit-function-declaration]
   74 |             if(buckets[index] == lastMap(map)){
      |                                  ^~~~~~~
hashmap.c:85:50: error: ‘newBucket’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   85 |         map -> buckets[index] -> key = newBucket -> key;
      |                                                  ^~
      |                                        (*       )
hashmap.c:86:52: error: ‘newBucket’ is a pointer to pointer; did you mean to dereference it before applying ‘->’ to it?
   86 |         map -> buckets[index] -> value = newBucket -> value;
      |                                                    ^~
      |                                          (*       )
4593101
Thu Apr 16 08:28:26 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:70:5: error: ‘else’ without a previous ‘if’
   70 |     else{
      |     ^~~~
hashmap.c:74:16: error: ‘buckets’ undeclared (first use in this function)
   74 |             if(buckets[index] == lastMap(map)){
      |                ^~~~~~~
hashmap.c:74:16: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:74:34: error: implicit declaration of function ‘lastMap’ [-Wimplicit-function-declaration]
   74 |             if(buckets[index] == lastMap(map)){
      |                                  ^~~~~~~
695a0b2
Thu Apr 16 08:28:53 PM UTC 2026: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:75:16: error: ‘buckets’ undeclared (first use in this function)
   75 |             if(buckets[index] == lastMap(map)){
      |                ^~~~~~~
hashmap.c:75:16: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:75:34: error: implicit declaration of function ‘lastMap’ [-Wimplicit-function-declaration]
   75 |             if(buckets[index] == lastMap(map)){
      |                                  ^~~~~~~
8fb8010
Thu Apr 16 08:29:28 PM UTC 2026: 
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:75:16: error: ‘buckets’ undeclared (first use in this function)
   75 |             if(buckets[index] == lastMap(map)){
      |                ^~~~~~~
hashmap.c:75:16: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:75:34: error: implicit declaration of function ‘lastMap’ [-Wimplicit-function-declaration]
   75 |             if(buckets[index] == lastMap(map)){
      |                                  ^~~~~~~
2bdbcc9
Thu Apr 16 08:29:58 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:75:41: error: implicit declaration of function ‘lastMap’ [-Wimplicit-function-declaration]
   75 |             if(map -> buckets[index] == lastMap(map)){
      |                                         ^~~~~~~
hashmap.c:75:38: error: comparison between pointer and integer [-Werror]
   75 |             if(map -> buckets[index] == lastMap(map)){
      |                                      ^~
cc1: all warnings being treated as errors
08c8431
Thu Apr 16 08:31:08 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:75:42: error: implicit declaration of function ‘lastMap’ [-Wimplicit-function-declaration]
   75 |             if(map -> buckets[index] == *lastMap(map)){
      |                                          ^~~~~~~
hashmap.c:75:41: error: invalid type argument of unary ‘*’ (have ‘int’)
   75 |             if(map -> buckets[index] == *lastMap(map)){
      |                                         ^~~~~~~~~~~~~
9f46334
Thu Apr 16 08:31:53 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d015fd4
Thu Apr 16 08:33:29 PM UTC 2026: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
5d35daf
Thu Apr 16 08:36:16 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
73911cd
Thu Apr 16 08:38:43 PM UTC 2026: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
443c1ab
Thu Apr 16 08:38:57 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
6bcf715
Thu Apr 16 08:41:15 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
ab7809f
Thu Apr 16 08:44:37 PM UTC 2026: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
6171e7b
Thu Apr 16 08:45:34 PM UTC 2026: 
 hashmap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:88:19: error: unknown conversion type character ‘h’ in format [-Werror=format=]
   88 |         printf("%lh", &index);
      |                   ^
hashmap.c:88:16: error: too many arguments for format [-Werror=format-extra-args]
   88 |         printf("%lh", &index);
      |                ^~~~~
cc1: all warnings being treated as errors
96cbf98
Thu Apr 16 08:45:50 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:88:20: error: format ‘%llu’ expects argument of type ‘long long unsigned int’, but argument 2 has type ‘long int *’ [-Werror=format=]
   88 |         printf("%llu", &index);
      |                 ~~~^   ~~~~~~
      |                    |   |
      |                    |   long int *
      |                    long long unsigned int
      |                 %ln
cc1: all warnings being treated as errors
6f003cb
Thu Apr 16 08:46:11 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6e58ba1
Thu Apr 16 08:47:29 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
01ec0ba
Thu Apr 16 08:48:02 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
75f2554
